--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "learnosity-sdk-nodejs": "github:Learnosity/learnosity-sdk-nodejs",
     "next": "14.1.3",
     "react": "^18",
